--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
+    "puppeteer": "^19.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.57.1",
     "typescript": "4.9.4"
   }
 }
