--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "puppeteer": "^19.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.41.5",
     "sass": "^1.57.1",
     "typescript": "4.9.4"
   }
